# Build-Service-Plasma-Widgets

./: README
buildresults/: metadata.desktop
buildresults/contents/qml/: main.qml
buildresults/contents/ui/: config.ui
obs-dataengine/: CMakeLists.txt  obsdataengine.cpp  obsdataengine.desktop  obsdataengine.h
obsstatus-blocked/: metadata.desktop
obsstatus-blocked/contents/qml/: main.qml
obsstatus-building/: metadata.desktop
obsstatus-building/contents/config/: main.xml
obsstatus-building/contents/qml/: main.qml
obsstatus-idle/: metadata.desktop
obsstatus-idle/contents/qml/: main.qml
obsstatus-scheduler/: metadata.desktop
obsstatus-scheduler/contents/qml/: main.qml
obsstatus-waiting/: metadata.desktop
obsstatus-waiting/contents/qml/: main.qml
requestlists/: metadata.desktop
requestlists/contents/config/: main.xml
requestlists/contents/qml/: main.qml
